--- a/browser/package.json
+++ b/browser/package.json
@@ -62,6 +62,7 @@
     "@fortawesome/fontawesome-free": "^5.10.0",
     "bootstrap": "^3.4.1",
     "classnames": "^2.2.3",
+    "copy-to-clipboard": "^3.2.0",
     "core-js": "^3.2.1",
     "expect": "^1.20.2",
     "glob-all": "^3.1.0",
